chore(CI): Use docker for CI scripts
Motiviation:
* Reproducing issues in CI is currently difficult
* Predicting issues in CI is currently difficult if you are not on
  ubuntu 18.04
* Reproducing issues submitted from other distros is currently done by
  creating a VM of that distro and building qtox for it locally
* Documentation for how to build on different distros is out of date
* Issues on non-ubuntu distributions are not caught by CI
* Cross compiling for windows locally is not trivial
* Iterating when working with custom build scripts is slow, scripts
  don't necessarily support re-running without re-starting the docker
  container and re-building qtox again
* Updating dependencies is a pain

Changes:
* docker-compose file has been added to the root of our repo.
  After `docker compose run --rm ubuntu` (or other supported distros),
  you are ready to compile and run qtox
* Dependencies are owned by dependency install scripts in buildscripts/.
  This allows us to use the same exact dependencies in our
  OSX/windows/linux scripts
* New docker images have been added for a variety of distributions.
  These are now run in CI in a variety of configurations
  * Docker images are cached in CI so rebuild time for the majority of
    jobs is quite quick
* Build scripts have been trimmed to leverage state of docker
  containers.
  * Windows build script no longer installs anything, dependencies are
    now managed by the windows_builder docker images
  * Build scripts should now be easily re-runnable. Usage is now `docker
    compose run --rm <image>` and then run the scripts
* All artifacts are now uploaded to github after build, this means we
  can take an appimage/flatpak/exe/dmg for any given PR and try it out
  without having to build it ourselves

Notes:
* Docker image size is quite important. We have a maximum of 5GB cache
  space on github actions. The majority of the linux distro docker
  images cache at ~300-400MB, which gives us room to test ~6 distros
  afte

--- a/buildscripts/docker/Dockerfile.debian_old
+++ b/buildscripts/docker/Dockerfile.debian_old
@@ -14,25 +14,22 @@
 #   You should have received a copy of the GNU General Public License
 #   along with qTox.  If not, see <http://www.gnu.org/licenses/>
 
-FROM debian:stretch
+
+FROM debian:oldoldstable
 
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
-    apt-get -y --force-yes install \
-    automake \
-    autotools-dev \
+    apt-get -y --force-yes --no-install-recommends install \
     build-essential \
-    check \
-    checkinstall \
     cmake \
-    ffmpeg \
+    curl \
+    ca-certificates \
+    extra-cmake-modules \
     git \
     libavcodec-dev \
     libavdevice-dev \
     libexif-dev \
-    libgdk-pixbuf2.0-dev \
-    libgtk2.0-dev \
     libopenal-dev \
     libopus-dev \
     libqrencode-dev \
@@ -42,37 +39,30 @@ RUN apt-get update && \
     libsqlcipher-dev \
     libtool \
     libvpx-dev \
-    libxss-dev \
+    libkf5sonnet-dev \
     pkg-config \
-    qrencode \
+    libqrencode-dev \
     qt5-default \
-    qttools5-dev \
-    qttools5-dev-tools \
-    yasm
+    qttools5-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN git clone https://github.com/toktok/c-toxcore.git /toxcore
-WORKDIR /toxcore
-RUN git checkout v0.2.12 && \
-        cmake . -DBOOTSTRAP_DAEMON=OFF && \
-        cmake --build . && \
-        make install && \
-        echo '/usr/local/lib/' >> /etc/ld.so.conf.d/locallib.conf && \
-        ldconfig
+COPY download/common.sh /build/download/common.sh
 
-RUN git clone https://github.com/toxext/toxext.git /toxext
-WORKDIR /toxext
-RUN git checkout v0.0.3 && \
-        cmake . && \
-        cmake --build . -- -j $(nproc) && \
-        cmake --build . --target install
+COPY download/download_snore.sh /build/download/download_snore.sh
+COPY build_snore_linux.sh /build/build_snore_linux.sh
+RUN mkdir -p /src/snore && \
+    cd /src/snore && \
+    /build/build_snore_linux.sh && \
+    rm -fr /src/snore
 
-RUN git clone https://github.com/toxext/tox_extension_messages.git /tox_extension_messages
-WORKDIR /tox_extension_messages
-RUN git checkout v0.0.3 && \
-        cmake . && \
-        cmake --build . -- -j $(nproc) && \
-        cmake --build . --target install
+COPY download/download_toxcore.sh /build/download/download_toxcore.sh
+COPY download/download_toxext.sh /build/download/download_toxext.sh
+COPY download/download_toxext_messages.sh /build/download/download_toxext_messages.sh
+COPY build_toxcore_linux.sh /build/build_toxcore_linux.sh
+RUN mkdir -p /src/tox && \
+    cd /src/tox && \
+    /build/build_toxcore_linux.sh && \
+    rm -fr /src/tox
 
-COPY . /qtox
 WORKDIR /qtox
-RUN cmake . && cmake --build .
