chore(build): Remove qTox-Mac-Deployer-ULTIMATE.sh
* It is only partially covered by CI and doesn't simplify the build process
much for users. Replacing it in CI with just build-osx.sh significantly reduces
script complexity and is fully tested.
* bootstrap-osx.sh copying system libs and headers locally is unneeded.
  Already the DMG file contains them, and re-linking the app against
updated system files may be desirable.
* Update INSTALL.md for macOS to use brewfile, use common dependency build
  scripts, and use cmake rather than wrapper scripts.
* Build macOS in Release mode in CI, for release artifact creation
* Don't copy all used libs into a local folder, macdeployerqt already
  handles this for the dmg, and for local running of the app using the
system libs and relinking on update is desirable to avoid running out of
date dependencies unexpectedly.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -273,20 +273,19 @@ jobs:
   build-osx:
     name: macOS
     runs-on: macos-10.15
-    env:
-      TRAVIS: true
-      TRAVIS_BUILD_DIR: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v2
       - name: homebrew
         run: brew upgrade && brew bundle --file ./osx/Brewfile
-      - name: Run
+      - name: Install toxcore and toxext
+        run: buildscripts/build_toxcore_linux.sh
+      - name: Build qTox
         run: ./.travis/build-osx.sh
       - name: Upload dmg
         uses: actions/upload-artifact@v2
         with:
           name: qTox-${{ github.sha }}.dmg
-          path: qTox-Mac_Build/qTox.dmg
+          path: qTox.dmg
   build-docs:
     name: Docs
     runs-on: ubuntu-18.04
