--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -326,7 +326,7 @@ jobs:
         with:
           docker_image_name: windows_builder
       - name: Run build
-        run: docker-compose run --rm windows_builder ./windows/cross-compile/build.sh --arch x86_64 --build-type ${{ matrix.build_type }} --src-dir /qtox
+        run: docker-compose run --rm windows_builder ./windows/cross-compile/build.sh --arch x86_64 --build-type ${{ matrix.build_type }} --run-tests --src-dir /qtox
       - name: Upload installer
         uses: actions/upload-artifact@v2
         with:
@@ -398,7 +398,7 @@ jobs:
         with:
           docker_image_name: windows_builder.i686
       - name: Run build
-        run: docker-compose run --rm windows_builder.i686 ./windows/cross-compile/build.sh --arch i686 --build-type ${{ matrix.build_type }} --src-dir /qtox
+        run: docker-compose run --rm windows_builder.i686 ./windows/cross-compile/build.sh --arch i686 --build-type ${{ matrix.build_type }} --run-tests --src-dir /qtox
       - name: Upload installer
         uses: actions/upload-artifact@v2
         with:
