--- a/osx/Brewfile
+++ b/osx/Brewfile
@@ -11,7 +11,7 @@ brew "cmake"
 brew "ffmpeg"
 brew "libexif"
 brew "qrencode"
-brew "qt5"
+brew "qt@5"
 brew "sqlcipher"
 brew "openal-soft"
 brew "msgpack"
