fix(Windows): Add missed openal dll since CI refactor
Old windows/cross-compile/build.sh copied OPENAL_PREFIX_DIR/bin/*.dll to be
included, but the current Dockerfile.windows_builder copies libs one by one
and misses OpenAL. qTox fails to start on launch with due to missing
OpenAL32.dll on Windows because of this.

Add a special check for OpenAL, since the generic missing dll check doesn't
cover it.

--- a/buildscripts/docker/Dockerfile.windows_builder
+++ b/buildscripts/docker/Dockerfile.windows_builder
@@ -191,6 +191,7 @@ RUN mkdir /export && \
   cp /windows/bin/libtoxcore.dll /export && \
   cp /windows/bin/libopus-*.dll /export && \
   cp /windows/lib/libvpx.dll /export && \
+  cp /windows/bin/OpenAL32.dll /export && \
   cp /windows/bin/libssl-*.dll /export && \
   cp /windows/bin/libsnore-qt5.dll /export && \
   mkdir -p /export/libsnore-qt5/ && \
