--- a/buildscripts/docker/Dockerfile.fedora
+++ b/buildscripts/docker/Dockerfile.fedora
@@ -38,6 +38,7 @@ RUN dnf --nodocs -y install dnf-plugins-core && \
         kf5-sonnet-devel \
         libXScrnSaver-devel \
         msgpack-devel \
+        patch \
         sqlite-devel \
         sqlcipher-devel && \
     dnf clean all
@@ -45,8 +46,10 @@ RUN dnf --nodocs -y install dnf-plugins-core && \
 ENV PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 
 COPY download/common.sh /build/download/common.sh
+
 COPY download/download_snore.sh /build/download/download_snore.sh
 COPY build_snore_linux.sh /build/build_snore_linux.sh
+COPY patches/snore.patch /build/patches/snore.patch
 RUN mkdir -p /src/snore && \
     cd /src/snore && \
     /build/build_snore_linux.sh && \
