chore(CI): Revert 8a72928ad1451a8a76151a1a070fb35c022aa53b
"chore(travis): don't fail generating docs when there's no git version"

No longer a concern on GH actions which allows deep clones.

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -506,6 +506,8 @@ jobs:
       DOXYGEN_CONFIG_FILE: doxygen.conf
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Run
         run: ./.travis/build-docs.sh
   build-gitstats:
