--- a/buildscripts/docker/Dockerfile.debian_old
+++ b/buildscripts/docker/Dockerfile.debian_old
@@ -42,6 +42,7 @@ RUN apt-get update && \
     libkf5sonnet-dev \
     pkg-config \
     libqrencode-dev \
+    libmsgpack-dev \
     qt5-default \
     qttools5-dev && \
     apt-get clean && \
