--- a/buildscripts/docker/Dockerfile.ubuntu_lts
+++ b/buildscripts/docker/Dockerfile.ubuntu_lts
@@ -58,6 +58,7 @@ RUN apt-get update && \
         libinotifytools0-dev \
         liblz4-dev \
         libcairo-dev \
+        libmsgpack-dev \
         desktop-file-utils \
         wget \
         xxd \
