--- a/buildscripts/docker/Dockerfile.almalinux
+++ b/buildscripts/docker/Dockerfile.almalinux
@@ -36,6 +36,7 @@ RUN dnf --nodocs -y install dnf-plugins-core && \
 		ffmpeg-devel \
 		libexif-devel \
 		qrencode-devel \
+		msgpack-devel \
 		openal-soft-devel \
 		kf5-sonnet-devel \
 		libXScrnSaver-devel \
