--- a/buildscripts/docker/Dockerfile.fedora
+++ b/buildscripts/docker/Dockerfile.fedora
@@ -46,6 +46,7 @@ RUN dnf --nodocs -y install dnf-plugins-core && \
 ENV PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 
 COPY download/common.sh /build/download/common.sh
+COPY platform_detection.sh /build/platform_detection.sh
 
 COPY download/download_snore.sh /build/download/download_snore.sh
 COPY build_snore_linux.sh /build/build_snore_linux.sh
