chore(CI): Add script for handling platform compile args

--- a/buildscripts/docker/Dockerfile.ubuntu_lts
+++ b/buildscripts/docker/Dockerfile.ubuntu_lts
@@ -70,6 +70,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 COPY download/common.sh /build/download/common.sh
+COPY build_utils.sh /build/build_utils.sh
 
 COPY download/download_snore.sh /build/download/download_snore.sh
 COPY build_snore_linux.sh /build/build_snore_linux.sh
