--- a/buildscripts/docker/Dockerfile.debian_old
+++ b/buildscripts/docker/Dockerfile.debian_old
@@ -49,6 +49,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 COPY download/common.sh /build/download/common.sh
+COPY cross_compile_detection.sh /build/cross_compile_detection.sh
 
 COPY download/download_snore.sh /build/download/download_snore.sh
 COPY build_snore_linux.sh /build/build_snore_linux.sh
