chore(CI): macOS CI script support for both full dep build or just qTox build
(cherry picked from commit bffa83b14fb06c78454bfe42289379de82344512)

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -461,7 +461,7 @@ jobs:
       - name: Install toxcore and toxext
         run: buildscripts/build_toxcore_linux.sh
       - name: Build qTox
-        run: ./.ci-scripts/build-osx.sh
+        run: buildscripts/build_osx.sh user
       - name: Upload dmg
         uses: actions/upload-artifact@v2
         with:
