feat(macOS): Build deps from source, giving backwards compatibility
Keep second CI job building with deps from brew, to test the workflow of a user
building qTox from source, with deps from brew.

Fix #6260

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -500,9 +500,9 @@ jobs:
           replacesArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "qtox-nightly-i686-${{ matrix.build_type }}.exe,qtox-nightly-i686-${{ matrix.build_type }}.exe.sha256"
-  build-osx:
-    name: macOS
-    runs-on: macos-10.15
+  build-osx-distributable:
+    name: macOS distributable
+    runs-on: macos-latest
     needs: update-nightly-tag
     if: |
       always() &&
@@ -512,12 +512,12 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v2
-      - name: homebrew
-        run: brew upgrade && brew bundle --file ./osx/Brewfile
-      - name: Install toxcore and toxext
-        run: buildscripts/build_toxcore_linux.sh
+      - name: Homebrew dependencies to build dependencies
+        run: brew upgrade && brew bundle --file ./osx/Brewfile-DepBuildDeps
+      - name: Build dependencies
+        run: ./.ci-scripts/build-osx-deps.sh
       - name: Build qTox
-        run: ./.ci-scripts/build-qtox-macos.sh user
+        run: ./.ci-scripts/build-qtox-macos.sh dist
       - name: Upload dmg
         uses: actions/upload-artifact@v2
         with:
@@ -551,6 +551,17 @@ jobs:
           replacesArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "qTox-nightly.dmg,qTox-nightly.dmg.sha256"
+  build-osx-users:
+    name: macOS user
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Homebrew
+        run: brew upgrade && brew bundle --file ./osx/Brewfile
+      - name: Install toxcore and toxext
+        run: buildscripts/build_toxcore_linux.sh
+      - name: Build qTox
+        run: ./.ci-scripts/build-qtox-macos.sh user
   build-docs:
     name: Docs
     runs-on: ubuntu-latest
